Add stop functions and separate results computation from simulation